--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,22 +17,46 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v2
 
+
+      - name: Compile LaTeX document Syllabus
+        uses: xu-cheng/latex-action@master
+        with:
+          root_file: main.tex
+          working_directory: Syllabus/
+
       - name: Compile LaTeX document Introduction
         uses: xu-cheng/latex-action@master
         with:
           root_file: main.tex
           working_directory: Slides/Introduction/
 
+      - name: Compile LaTeX document AlgebraOfTransformations
+        uses: xu-cheng/latex-action@master
+        with:
+          root_file: main.tex
+          working_directory: Slides/AlgebraOfTransformations/
 
 
 
 
+      - name: Save Syllabus artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: Syllabus.pdf
+          path: Syllabus/main.pdf
 
       - name: Save Introduction artifact
         uses: actions/upload-artifact@v1
         with:
           name: Introduction.pdf
           path: Slides/Introduction/main.pdf
+
+      - name: Save AlgebraOfTransformations artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: AlgebraOfTransformations.pdf
+          path: Slides/AlgebraOfTransformations/main.pdf
+
 
 
 
@@ -42,7 +66,9 @@ jobs:
         run: |
           git config --global user.name 'CI PDF compiler'
           git config --global user.email '<>'
+          git add Syllabus/main.pdf
           git add Slides/Introduction/main.pdf
+          git add Slides/AlgebraOfTransformations/main.pdf
 
 
 
